# aoc2023

./: .gitignore  CMakeLists.txt  Makefile  main.c
cpp/: CMakeLists.txt  D1.cpp  D1.h  main.cpp
day1/: d1.c  d1.h
day10/: d10.c  d10.h
day11/: d11.c  d11.h
day12/: d12.c  d12.h
day13/: d13.c  d13.h
day14/: d14.c  d14.h
day15/: d15.c  d15.h
day16/: d16.c  d16.h
day17/: d17.c  d17.h
day18/: d18.c  d18.h
day2/: d2.c  d2.h
day3/: d3.c  d3.h
day4/: d4.c  d4.h
day5/: d5.c  d5.h
day6/: d6.c  d6.h
day7/: d7.c  d7.h
day8/: d8.c  d8.h
day9/: d9.c  d9.h
hashmap/: map.c
